left aligned text in navmenu also the metas were haunted or something and that's fixed now

--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,7 @@ input[type=radio]:checked + label.tablabel + div {
 }
 .tinynav > ul > li > a {
 	line-height: 1.8em;
+	text-align: left;
 }
 input[type=checkbox], .tinynav {
 	display:none;
